--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "will-you-be-my-valentine",
-  "homepage": "https://saurabhnemade.github.io/will-you-be-my-valentine",
+  "name": "test",
   "private": true,
   "version": "0.0.1",
   "type": "module",
